# rust-htmlescape

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  moonstone-short.txt  pkg.rs
benches/: bench.rs
src/: decode.rs  encode.rs  entities.rs  htmlescape.rc  htmlescape.rs  lib.rs
src/htmlescape/: htmlescape.rs  lib.rs  test.rs
tests/: test.rs
