[package]
name = "htmlescape"
version = "0.3.1"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>" ]
license = "Apache-2.0 / MIT / MPL-2.0"
repository = "https://github.com/veddan/rust-htmlescape"
description = "A library for HTML entity encoding and decoding"

[lib]
name = "htmlescape"
path = "src/lib.rs"

[dev-dependencies]
num = "0.1.26"
rand = "0.3.14"
