[package]
name = "forgiving-htmlescape"
version = "0.1"
authors = [ "Viktor Dahl <pazaconyoman@gmail.com>", "Maciej Dziardziel" <fiedzia@gmail.com> ]
license = "Apache-2.0 / MIT / MPL-2.0"
repository = "https://github.com/Fiedzia/rust-htmlescape"
description = "A library for HTML entity encoding and decoding, with support for leaving malformed entities intact"

[lib]
name = "htmlescape"
path = "src/lib.rs"

[dev-dependencies]
num = "0.1.26"
rand = "0.3.14"
